# interview-ai

./: .gitignore  DEPLOYMENT_PLAN.md  README.md
backend/: .env.template  .railwayignore  app.py  app_v2.py  pyproject.toml
backend/notebooks/: 01_prompt_engineering_exploration.ipynb  02_security_guards_and_validation.ipynb  03_structured_outputs_and_json.ipynb  04_multi_llm_integration.ipynb  05_langchain_agents_and_chains.ipynb  06_vector_database_rag.ipynb  07_chatbot_conversation_flow.ipynb
backend/src/: __init__.py
backend/src/core/: __init__.py  conversation.py  conversation_flow.py  langchain_setup.py  llm_client.py  llm_client_app.py  llm_client_v2.py  llm_integration.py  prompt_templates.py  prompt_templates_app.py  prompt_templates_v2.py  rag_pipeline.py  schemas.py  state_transitions.py  state_v2.py  validators.py
backend/src/domain/: models_v2.py  schemas.py
backend/src/graph/: interview_graph.py  interview_graph_v2.py
backend/src/routers/: health.py  interview.py  sessions.py  sessions_v2.py
backend/src/security/: prompt_guard.py  validators.py
backend/src/services/: chat_service.py  question_service.py  session_manager_v2.py  storage.py
backend/src/utils/: __init__.py  helpers.py  json_package.py  json_utils.py
interview-app-frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
interview-app-frontend/client/: index.html
interview-app-frontend/client/src/: App.tsx  index.css
interview-app-frontend/client/src/components/: header.tsx  progress-stepper.tsx  theme-provider.tsx
interview-app-frontend/shared/: schema.ts
(+6 files in other folders)
